--- a/login.css
+++ b/login.css
@@ -1,132 +1,168 @@
-*{
-    margin:0px;
-    padding: 0px;
+* {
+    margin: 0;
+    padding: 0;
     box-sizing: border-box;
     font-family: 'PT Serif', serif;
 }
-a{
+
+a {
     text-decoration: none;
     color: black;
 }
-:root{
-    --blue1: #3428d5;
-    --blue2:#481dcb;
-    --light-blue: #3464d4;
-    --dark-blue: #0d1c40;
-    --dark-blue2: #121e3d;
-    --nav:#897fbf;
-    --font:#d3ceea;
 
-    --purple1: #6425d2;
-    --purple2: #7424d1;
-    --lavender: #b09efd;
---dark-purple: #442062;
+:root {
+    --primary-color: #3498db;
+    --secondary-color: #2ecc71;
+    --accent-color: #e74c3c;
+    --background-color: #ecf0f1;
+    --text-color: #2c3e50;
 }
 
-.container{
+.container {
+    background: linear-gradient(rgba(0, 0, 0, 0.7), rgba(0, 0, 0, 0.7)), url('loginimg.jpg') center/cover no-repeat;
     width: 100%;
     height: 100vh;
-    background-color: black;
-    /* background-image: linear-gradient(rgba(0,0,50,0.8),rgba(0,0,50,0.8)), url(loginbg.jpg); */
-    /* background-image: url('loginbg.jpg'); */
-    background-position: center;
-    background-size: cover;
+    background-color: var(--background-color);
     position: relative;
 }
-.form-box{
+
+
+.form-box {
+    
     width: 90%;
     max-width: 450px;
     position: absolute;
     top: 50%;
-    left: 50%;
+    left: 60%;
     transform: translate(-50%, -50%);
-    background-color: #7424d1;
-    padding: 50px 60px 70px;
+    background-color:#08080838;
+    padding: 30px 40px 50px;
     text-align: center;
-    box-shadow: 10px 10px 10px #b09efd;
+    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.1);
+    border-radius: 15px;
 }
 
-.form-box h1{
-    font-size: 2rem;
+.form-box h1 {
+    font-size: 70px;
     margin-bottom: 60px;
     position: relative;
-    color: black;
+    color: #ffffff;
 }
-.form-box h1::after{
+
+.form-box h1::after {
     content: '';
     width: 30px;
     height: 4px;
     border-radius: 3px;
-    background:black;
-    position:absolute;
+    background: #ffffff;
+    position: absolute;
     bottom: -12px;
     left: 50%;
     transform: translateX(-50%);
 }
 
-.input-field{
-    background: var(--font);
-    margin: 15px 0px;
-    border-radius: 3px;
+.input-field {
+    background: #ffffff;
+    margin: 15px 0;
+    border-radius: 8px;
     display: flex;
     align-items: center;
-    padding: 0px 0px;
-    color: black;
-}
-.input-field input::placeholder {
-    color: black;
-}
-input{
-    width: 100%;
-    background-color: #b09efd;
-    border: 0;
-    outline: 0;
-    padding: 18px 15px;
-    color: black;
-}
-.input-field i{
-    margin: 0;
     padding: 0;
-    color:black;
-    max-height: 65px;
-    transition: max-height 0.5px;
-    overflow: hidden;
-}
-form p{
-    text-align: left;
-    font-size: 13px;
-}
-form p a{
-    text-decoration: none;
-    color: var(--blue1);
+    color: var(--text-color);
 }
 
-.btn-field{
+input::placeholder {
+    color: var(--text-color);
+}
+
+input {
+    width: 100%;
+    background-color: #ecf0f1;
+    border: 0;
+    outline: 0;
+    padding: 15px;
+    border-radius: 8px;
+    color: var(--text-color);
+    font-size: 20px;
+}
+
+.input-field i {
+    margin: 0;
+    padding: 0;
+    color: var(--text-color);
+    max-height: 65px;
+    transition: max-height 0.5s;
+    overflow: hidden;
+}
+
+form p {
+    text-align: left;
+    font-size: 14px;
+    color: #7f8c8d;
+    margin-top: 8px;
+}
+
+form p a {
+    text-decoration: none;
+    color: #2ecc71;
+}
+
+.btn-field {
     width: 100%;
     display: flex;
     justify-content: space-between;
+    margin-top: 20px;
 }
-.btn-field button{
-    flex-basis: 45%;
-    background-color: #d3ceea;
-    height: 35px;
+
+.btn-field button {
+    flex-basis: 48%;
+    background-color: #aecaba;
+    height: 40px;
     border-radius: 20px;
-    border: 0px;
+    border: 0;
     outline: 0;
     cursor: pointer;
-    transition: background 1s;
+    transition: background 0.5s;
+    color: #ffffff;
 }
-.input-group{
+
+.btn-field button:hover {
+    background-color: #27ae60;
+}
+
+.btn-field button.disable {
+    background-color: #bdc3c7;
+    cursor: not-allowed;
+}
+
+.input-group {
     height: 250px;
 }
-.btn-field button.disable{
-    background-color: var(--font);
-}
-.hide{
+
+.hide {
     display: none;
 }
-.tag{
+
+.tag {
     font-size: 1.2rem;
-    color: red;
-    margin: 10px 0px;
+    color: #e74c3c;
+    margin: 10px 0;
+}
+#loginname{
+    font-size: 20px;
+    padding: 20px;
+}
+input{
+color: black;
+}
+   
+#loginpassword{
+    padding: 20px;
+    font-size: 20px;
+}
+.btn-field button{
+    font-size: 20px;
+}
+.btn-field{
+    margin-top: 50px;
 }
